<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetActivity">

    <TextView
        android:id="@+id/title_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:textColor="#FF0057"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textSize="@dimen/_20ssp"/>
    <EditText
        android:id="@+id/edt_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_below="@id/title_reset"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/blue"
        android:textColor="@android:color/white"
        android:layout_below="@id/edt_reset_email"
        android:gravity="center"
        android:text="@string/reset_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/edt_reset_email"
        tools:ignore="UselessLeaf">

        <Button
            android:id="@+id/btn_back_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:layout_margin="@dimen/_50sdp"
            android:gravity="center"
            android:textColor="#FF0057"
            android:background="@android:color/transparent"
            android:text="@string/back"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btn_exit_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:layout_margin="@dimen/_50sdp"
            android:gravity="center"
            android:textColor="#FF0057"
            android:text="@string/exit"
            android:background="@android:color/transparent"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</RelativeLayout>