<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.PageProfileAlwi">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="3"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_280sdp"
                tools:ignore="UselessParent"
                android:background="@color/colorPrimary">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/alwi"
                    android:contentDescription="@string/description_picture_profile"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_245sdp"
                    android:text="@string/my_profile"
                    android:textColor="#fff"
                    android:textSize="@dimen/_25ssp"/>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_height="@dimen/_100sdp"
                tools:ignore="ObsoleteLayoutParam">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="DisableBaselineAlignment">

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textSize="@dimen/_15ssp"
                            android:textColor="#000"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_profile_three"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold"
                            android:paddingTop="@dimen/_10sdp"
                            android:textColor="#800000"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nim"
                            android:textSize="@dimen/_15ssp"
                            android:textColor="#000"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nim_alwi"
                            android:textSize="@dimen/_15ssp"
                            android:textStyle="bold"
                            android:paddingTop="@dimen/_10sdp"
                            android:textColor="#800000"/>

                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_15ssp"
                            android:textColor="#000"
                            android:text="@string/jurusan"/>
                        <TextView
                            android:paddingTop="@dimen/_10sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_jurusan"
                            android:textSize="@dimen/_10ssp"
                            android:textColor="#800000"
                            android:textStyle="bold"/>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>