<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/anim"
    tools:context=".activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/login"
            tools:ignore="MissingConstraints,TextFields"
            android:importantForAutofill="no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/edt_email1"
            tools:ignore="Autofill,MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                tools:ignore="Autofill,MissingConstraints" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_password1"
            android:layout_marginTop="@dimen/_20sdp"
            android:onClick="onClick"
            android:text="@string/login"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            tools:ignore="MissingConstraints,OnClick" />

        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            android:text="@string/no_have_account"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account"
            android:onClick="onClick"
            android:text="@string/register"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/account2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            android:text="@string/forgot_password"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/account2"
            android:onClick="onClick"
            android:text="@string/reset_password"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            tools:ignore="MissingConstraints" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_login_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/btn_reset"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>