<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cs_anim"
    tools:context=".activity.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email_register1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_goneMarginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/register"
            tools:ignore="MissingConstraints,TextFields"
            android:importantForAutofill="no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                tools:ignore="Autofill,MissingConstraints,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password_register1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/edt_email_register1"
            tools:ignore="Autofill,MissingConstraints">

            <EditText
                android:id="@+id/edt_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                tools:ignore="Autofill,MissingConstraints" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/gender"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintRight_toRightOf="@id/tv_selection1"
            app:layout_constraintTop_toBottomOf="@id/edt_password_register1"
            android:textColor="#2196F3"
            tools:ignore="MissingConstraints" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_selection1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/edt_password_register1"
            tools:ignore="Autofill,MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/choose"
                android:textSize="14sp"
                tools:ignore="Autofill,TextFields" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_selection1"
            android:layout_marginTop="@dimen/_20sdp"
            android:onClick="onClick"
            android:text="@string/register"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            android:text="@string/i_have_account"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            app:layout_constraintTop_toBottomOf="@id/account"
            android:text="@string/login"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>